scrollbar distance fix

--- a/packages/web-spreadsheet/src/index.less
+++ b/packages/web-spreadsheet/src/index.less
@@ -280,7 +280,6 @@
   background-color: #f4f5f8;
   z-index: 12;
   &.horizontal {
-    right: 15px;
     overflow-x: scroll;
     overflow-y: hidden;
     > div {
